--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+
+    <script type="module" src="/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    <title>Map</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1>Welcome to my custom map!</h1>
+    <div id="map"></div>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap&v=weekly"
+      defer
+    ></script>
   </body>
 </html>
